Delete unused imports and make suggested changes